* [PasswordField] Fixed overflow of input group

--- a/src/view/Components/Fields/PasswordField/PasswordField.scss
+++ b/src/view/Components/Fields/PasswordField/PasswordField.scss
@@ -8,4 +8,8 @@
     --btn-icon-height: 18px;
     --btn-icon-width: 28px;
   }
+
+  .input-group {
+    overflow: hidden;
+  }
 }
